# git-relay

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RFC_ARC_REVIEW_CLAUDE.md  RFC_ARC_REVIEW_CODEX.md  RFC_PROOF_E2E_TEST.md  flake.nix  git-relay-rfc.md  verification-plan.md
.github/workflows/: proof-gates.yml
fixtures/hosted/: targets.json
packaging/example/: git-relay.env.example  git-relay.example.toml
scripts/ci/: provider-admission-gate.sh
src/: audit.rs  classification.rs  cli.rs  config.rs  crash.rs  deploy.rs  git.rs  hooks.rs  lib.rs  main.rs  maintenance.rs  migration.rs  platform.rs  read_path.rs  reconcile.rs  release.rs  ssh_wrapper.rs  upstream.rs  validator.rs
tests/: cli.rs  rfc_proof_e2e.rs
tests/proof_support/: artifact.rs  cmd.rs  lab.rs  mod.rs  normalize.rs  schema.rs  transport.rs
tests/proof_support/cases/: mod.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs
