[package]
name = "git-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tempfile = "3.20.0"
thiserror = "2.0.17"
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
